@@ -7,6 +7,7 @@
 	* Test cases 73 & 92 keep track of various circular references.
 	* Introduced compiler directives to allow finer control over the
 	  generated code ("--<ASN1C...>--" in comments), (Test case 93).
+	* New feature for unber(1): -s <skip> bytes.
 
 0.9.18:	2005-Aug-14
 
